k8s/django-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-app
  template:
    metadata:
      labels:
        app: django-app
    spec:
      containers:
        - name: django
          image: localhost/django-app:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 5005
