k8s/next-js-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: next-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: next-app
  template:
    metadata:
      labels:
        app: next-app
    spec:
      containers:
        - name: nextjs
          image: localhost/next-js-app:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 9090
